# echo-opt

./: LICENSE  MANIFEST.in  README.md  environment.yml  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-package-conda.yml
echo/: README.ipynb  README.md  database.txt  db_management.ipynb  optimize.py  report.py  run.py
echo/examples/keras/: data_generator.py  hyperparameter.yml  launch.sh  model.py  model_config.yml  objective.py  training_example.ipynb
echo/examples/torch/: hyperparameter.yml  model_config.yml  objective.py  training_example.ipynb
echo/examples/torch/fmc/: hyper-nn.yml  nn.yml  train_mlp.py
echo/examples/torch/vae/: model.yml  objective.py
echo/src/: base_objective.py  config.py  partial_dependence.py  pruners.py  reporting.py  samplers.py  trial_suggest.py
echo/tests/: test_echo.py  tests.py
