[metadata]
name = echo-opt
description = Earth Computer Hyperparameter Optimization: Distributed hyperparameter optimization on HPC and GPU systems with analysis tools.
long_description = file: README.md
long_description_content_type = text/markdown
author = John Schreck, David John Gagne, Charlie Becker, Gabrielle Gantos
author_email = miles@ucar.edu
license = MIT
license_file = LICENSE
platform = any
version = file: echo/VERSION
keywords = machine-learning, hyperparameter, gpu
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
url = https://github.com/NCAR/echo-opt

[options]
zip_safe=True
packages =
    echo
    echo.src
include_package_data = True
setup_requires = setuptools
python_requires = >=3.7
install_requires =
    numpy<1.24.0
    scipy
    matplotlib
    optuna
    setuptools
    pandas
    scikit-learn
    tensorflow
    torch
    xgboost
    torchvision
    pyarrow
    pyyaml

[options.entry_points]
console_scripts =
    echo-opt = echo.optimize:main
    echo-run = echo.run:main
    echo-report = echo.report:main
